workspaces/diff-engine/src/learn_shape/snapshots/optic_diff_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_object_bodies__empty_object_results.snap
---
source: workspaces/diff-engine/src/learn_shape/result.rs
expression: "&empty_object_results"
---
(
    Some(
        "test-id-7",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-7",
                    base_shape_id: "$object",
                    name: "",
                },
            ),
        ),
    ],
    Some(
        "test-id-7",
    ),
)
